Fixed search results UI: handle click on book divs properly

--- a/templates/search.html
+++ b/templates/search.html
@@ -3,9 +3,9 @@
 {% block head %}
 	<script type="text/javascript">
 		$(function(){
-			$('.clickable').click(function(){
+			$('.clickable').click(function(e){
 				var url = $(this).find('a.permalink').attr('href');
-				console.log(url);
+				window.location = url;
 			});
 		});
 	</script>
