--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -16,7 +16,7 @@
 				twitter or the form below.
 			</p>
 			<ul>
-				<li>Email: <a href="mailto:zaimworks@gmail.com">zaimworks@gmail.com</a></li>
+				<li>Email: <a href="mailto:zaimworks+bukutip@gmail.com">zaimworks@gmail.com</a></li>
 				<li>Twitter: <a href="http://twitter.com/zaim">@zaim</a></li>
 			</ul>
 			<form method="post" action="/feedback/send">
