--- a/templates/search.html
+++ b/templates/search.html
@@ -29,17 +29,19 @@
 		<section id="content">
 			{% for book in books %}
 			<article class="book clickable" id="book-{{ book.isbn13 }}">
-				<div class="image{% if not book.links.thumbnail %} no-thumb{% endif %}">
-					<a href="{{ book.permalink }}" class="permalink">{% if book.links.thumbnail %}<img src="{{ book.links.thumbnail }}"/>{% else %}No image{% endif %}</a>
-				</div>
-				<div class="info">
-					<h1 class="normal tight"><a href="{{ book.permalink }}" class="title permalink">{{ book.title }}</a></h1>
-					<h2 class="small tight">
-						by <span class="authors">{{ book.authors|join(', ') }}</span>
-						{% if book.published_date %}<span class="published-date">({{ book.published_date.year }})</span>{% endif %}
-					</h2>
-					<p class="description tight">{% if book.description %}{{ book.description }}{% else %}<em>No description</em>{% endif %}</p>
-				</div>
+				<header>
+					<div class="image{% if not book.links.thumbnail %} no-thumb{% endif %}">
+						<a href="{{ book.permalink }}" class="permalink">{% if book.links.thumbnail %}<img src="{{ book.links.thumbnail }}"/>{% else %}No image{% endif %}</a>
+					</div>
+					<div class="info">
+						<h1 class="normal tight"><a href="{{ book.permalink }}" class="title permalink">{{ book.title }}</a></h1>
+						<h2 class="small tight">
+							by <span class="authors">{{ book.authors|join(', ') }}</span>
+							{% if book.published_date %}<span class="published-date">({{ book.published_date.year }})</span>{% endif %}
+						</h2>
+						<p class="description tight">{% if book.description %}{{ book.description }}{% else %}<em>No description</em>{% endif %}</p>
+					</div>
+				</header>
 			</article>
 			{% else %}
 			<h2>No books found, sorry.</h2>
