--- a/templates/view.html
+++ b/templates/view.html
@@ -87,15 +87,11 @@
 						</div>
 					</section>
 					{%- endif %}
-					{% if book.links.amazon -%}
-					<section class="sub amazon">
+					<section class="sub facebook">
 						<div class="wrap">
-							<h3 class="small">Amazon.com</h3>
-							<p class="small sp">Sponsored Link</p>
-							<p class="small"><a href="{{ book.links.amazon }}"><img src="https://images-na.ssl-images-amazon.com/images/G/01/buttons/buy-from-tan.gif"/></a></p>
+							<iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FBukuTip%2F133547330034317&amp;layout=button_count&amp;show_faces=true&amp;width=90&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
 						</div>
 					</section>
-					{%- endif %}
 				</section>
 			</article>
 		{% endif %}
